--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
     <jacoco-maven-plugin.version>0.7.8</jacoco-maven-plugin.version>
     <enunciate.version>2.8.0</enunciate.version>
 
-    <findbugs.failOnError>false</findbugs.failOnError>
+    <findbugs.failOnError>true</findbugs.failOnError>
   </properties>
 
   <build>
