--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,11 @@
     <checkstyle.suppressions.location>src/main/resources/checkstyle-suppressions.xml</checkstyle.suppressions.location>
     <checkstyle.consoleOutput>true</checkstyle.consoleOutput>
 
-
     <jacoco-maven-plugin.version>0.7.8</jacoco-maven-plugin.version>
     <enunciate.version>2.8.0</enunciate.version>
+
+    <!-- Enable DEV mode by default -->
+    <ZANATA_MT_DEV_MODE>true</ZANATA_MT_DEV_MODE>
 
     <findbugs.failOnError>true</findbugs.failOnError>
   </properties>
@@ -689,6 +691,16 @@
     </dependency>
 
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>production</id>
+      <properties>
+        <name>production</name>
+        <ZANATA_MT_DEV_MODE>false</ZANATA_MT_DEV_MODE>
+      </properties>
+    </profile>
+  </profiles>
 
   <repositories>
     <repository>
