feat: implement google backend

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
     <resteasy.version>3.1.0.Final</resteasy.version>
     <javamelody.version>1.62.0</javamelody.version>
     <guava.version>20.0</guava.version>
+    <google-cloud-translate.version>0.20.0-beta</google-cloud-translate.version>
     <findbugs.maven.version>3.0.1u2</findbugs.maven.version>
     <slf4j.version>1.7.22</slf4j.version>
     <validation-api.version>1.1.0.Final</validation-api.version>
@@ -58,8 +59,8 @@
     <checkstyle.maven.version>2.17</checkstyle.maven.version>
     <checkstyle.version>7.2</checkstyle.version>
     <checkstyle.skip>false</checkstyle.skip>
-    <checkstyle.config.location>src/main/resources/checkstyle.xml</checkstyle.config.location>
-    <checkstyle.suppressions.location>src/main/resources/checkstyle-suppressions.xml</checkstyle.suppressions.location>
+    <checkstyle.config.location>resources/checkstyle.xml</checkstyle.config.location>
+    <checkstyle.suppressions.location>resources/checkstyle-suppressions.xml</checkstyle.suppressions.location>
     <checkstyle.consoleOutput>true</checkstyle.consoleOutput>
     <jacoco-maven-plugin.version>0.7.8</jacoco-maven-plugin.version>
     <enunciate.version>2.8.0</enunciate.version>
@@ -135,6 +136,12 @@
         <groupId>net.bull.javamelody</groupId>
         <artifactId>javamelody-core</artifactId>
         <version>${javamelody.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-translate</artifactId>
+        <version>${google-cloud-translate.version}</version>
       </dependency>
 
       <dependency>
