--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <javamelody.version>1.62.0</javamelody.version>
     <guava.version>20.0</guava.version>
     <google-cloud-translate.version>0.20.0-beta</google-cloud-translate.version>
+    <google-oauth-client.version>1.22.0</google-oauth-client.version>
     <findbugs.maven.version>3.0.1u2</findbugs.maven.version>
     <slf4j.version>1.7.22</slf4j.version>
     <validation-api.version>1.1.0.Final</validation-api.version>
@@ -142,6 +143,12 @@
         <groupId>com.google.cloud</groupId>
         <artifactId>google-cloud-translate</artifactId>
         <version>${google-cloud-translate.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.google.oauth-client</groupId>
+        <artifactId>google-oauth-client</artifactId>
+        <version>${google-oauth-client.version}</version>
       </dependency>
 
       <dependency>
