--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <resteasy.version>3.1.0.Final</resteasy.version>
     <javamelody.version>1.62.0</javamelody.version>
     <guava.version>20.0</guava.version>
-    <google-cloud-translate.version>0.20.0-beta</google-cloud-translate.version>
+    <google-cloud-translate.version>0.20.2-beta</google-cloud-translate.version>
     <google-oauth-client.version>1.22.0</google-oauth-client.version>
     <findbugs.maven.version>3.0.1u2</findbugs.maven.version>
     <slf4j.version>1.7.22</slf4j.version>
@@ -143,7 +143,14 @@
       <dependency>
         <groupId>com.google.cloud</groupId>
         <artifactId>google-cloud-translate</artifactId>
-        <version>${google-cloud-translate.version}</version>
+        <!--<version>${google-cloud-translate.version}</version>-->
+        <version>0.20.3-beta-SNAPSHOT</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.google.apis</groupId>
+        <artifactId>google-api-services-translate</artifactId>
+        <version>v2-rev51-1.22.0</version>
       </dependency>
 
       <dependency>
