--- a/pom.xml
+++ b/pom.xml
@@ -37,13 +37,13 @@
     <resteasy.version>3.1.0.Final</resteasy.version>
     <javamelody.version>1.62.0</javamelody.version>
     <guava.version>20.0</guava.version>
-    <google-cloud-translate.version>0.20.2-beta</google-cloud-translate.version>
+    <google-cloud-translate.version>1.2.3</google-cloud-translate.version>
     <google-oauth-client.version>1.22.0</google-oauth-client.version>
     <findbugs.maven.version>3.0.1u2</findbugs.maven.version>
     <slf4j.version>1.7.22</slf4j.version>
     <validation-api.version>1.1.0.Final</validation-api.version>
     <hibernate.validator.version>5.3.4.Final</hibernate.validator.version>
-    <hibernate.version>5.2.5.Final</hibernate.version>
+    <hibernate.version>5.0.10.Final</hibernate.version>
     <hibernate.commons.version>5.0.1.Final</hibernate.commons.version>
     <powermock.version>1.6.6</powermock.version>
     <okapi.version>0.33</okapi.version>
@@ -143,6 +143,7 @@
       <dependency>
         <groupId>com.google.cloud</groupId>
         <artifactId>google-cloud-translate</artifactId>
+        <!-- TODO pahuang update once google releases new version -->
         <!--<version>${google-cloud-translate.version}</version>-->
         <version>0.20.3-beta-SNAPSHOT</version>
       </dependency>
