--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,7 @@
         <artifactId>google-cloud-translate</artifactId>
         <!-- TODO pahuang update once google releases new version -->
         <!--<version>${google-cloud-translate.version}</version>-->
-        <version>0.20.3-beta-SNAPSHOT</version>
+        <version>0.20.4-alpha-SNAPSHOT</version>
       </dependency>
 
       <dependency>
