--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -12,7 +12,7 @@ RUN curl -L -o $JBOSS_HOME/standalone/deployments/postgresql-connector.jar https
 ENV LANG=en_US.UTF-8
 
 # Copy config script
-COPY docker/conf/zanata-mt-config.cli /tmp/
+COPY docker/zanata-mt-config.cli /tmp/
 
 # run config script to edit standalone-full.xml
 RUN $JBOSS_HOME/bin/jboss-cli.sh --file=/tmp/zanata-mt-config.cli
