--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ language: java
 install: /bin/true
 
 script: |
-  ./mvnw clean verify \
+  ./mvnw clean verify -DskipItTests \
     --batch-mode \
     --update-snapshots
 
