--- a/server/docker/Dockerfile-OPENSHIFT
+++ b/server/docker/Dockerfile-OPENSHIFT
@@ -15,6 +15,9 @@ USER root
 
 # copy all certs from certs/ directory
 COPY certs/ /etc/pki/ca-trust/source/anchors/
+
+# copy certs to postgresql default directory as root.crt
+COPY certs/RH-IT-Root-CA.crt /home/jboss/.postgresql/root.crt
 RUN update-ca-trust
 
 
