--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -52,4 +52,7 @@
     <filter-name>javamelody</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
+  <!-- mark the app as distributable so that its session can be distributed -->
+  <distributable />
 </web-app>
