--- a/server/pom.xml
+++ b/server/pom.xml
@@ -147,12 +147,12 @@
                     <POSTGRESQL_DATABASE>${db.name}</POSTGRESQL_DATABASE>
                     <POSTGRESQL_USER>${postgresql.user}</POSTGRESQL_USER>
                     <POSTGRESQL_PASSWORD>${postgresql.password}</POSTGRESQL_PASSWORD>
-                    <ZANATA_MT_AZURE_KEY>${ZANATA_MT_AZURE_KEY}</ZANATA_MT_AZURE_KEY>
+                    <MT_AZURE_KEY>${MT_AZURE_KEY}</MT_AZURE_KEY>
                     <MT_GOOGLE_CREDENTIAL_CONTENT>${MT_GOOGLE_CREDENTIAL_CONTENT}</MT_GOOGLE_CREDENTIAL_CONTENT>
                     <!-- this need to match the volume binding below -->
                     <GOOGLE_APPLICATION_CREDENTIALS>/opt/jboss/google/zanata-mt-credential.json</GOOGLE_APPLICATION_CREDENTIALS>
-                    <ZANATA_MT_API_ID>devID</ZANATA_MT_API_ID>
-                    <ZANATA_MT_API_KEY>devKEY</ZANATA_MT_API_KEY>
+                    <MT_API_ID>devID</MT_API_ID>
+                    <MT_API_KEY>devKEY</MT_API_KEY>
                     <DEFAULT_TRANSLATION_PROVIDER>dev</DEFAULT_TRANSLATION_PROVIDER>
                   </env>
                   <dependsOn>
