--- a/server/pom.xml
+++ b/server/pom.xml
@@ -22,7 +22,7 @@
     <postgresql.user>root</postgresql.user>
     <postgresql.password>root</postgresql.password>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <GOOGLE_APPLICATION_CREDENTIALS>${project.build.testOutputDirectory}/zanata-mt-credentials.json</GOOGLE_APPLICATION_CREDENTIALS>
+    <GOOGLE_APPLICATION_CREDENTIALS>${project.build.testOutputDirectory}/mt-credentials.json</GOOGLE_APPLICATION_CREDENTIALS>
     <kotlin.version>1.1.51</kotlin.version>
     <jboss.http.port>8080</jboss.http.port>
     <jboss.debug.port>8787</jboss.debug.port>
@@ -150,7 +150,7 @@
                     <MT_AZURE_KEY>${MT_AZURE_KEY}</MT_AZURE_KEY>
                     <MT_GOOGLE_CREDENTIAL_CONTENT>${MT_GOOGLE_CREDENTIAL_CONTENT}</MT_GOOGLE_CREDENTIAL_CONTENT>
                     <!-- this need to match the volume binding below -->
-                    <GOOGLE_APPLICATION_CREDENTIALS>/opt/jboss/google/zanata-mt-credential.json</GOOGLE_APPLICATION_CREDENTIALS>
+                    <GOOGLE_APPLICATION_CREDENTIALS>/opt/jboss/google/mt-credential.json</GOOGLE_APPLICATION_CREDENTIALS>
                     <MT_API_ID>devID</MT_API_ID>
                     <MT_API_KEY>devKEY</MT_API_KEY>
                     <DEFAULT_TRANSLATION_PROVIDER>dev</DEFAULT_TRANSLATION_PROVIDER>
@@ -179,7 +179,7 @@
                   </links>
                   <volumes>
                     <bind>
-                      ${GOOGLE_APPLICATION_CREDENTIALS}:/opt/jboss/google/zanata-mt-credential.json
+                      ${GOOGLE_APPLICATION_CREDENTIALS}:/opt/jboss/google/mt-credential.json
                     </bind>
                   </volumes>
                   <namingStrategy>alias</namingStrategy>
